# linux_libnfc-nci

./: CMakeLists.txt  README.md
conf/: libnfc-nxp.conf
demoapp/: CMakeLists.txt  main.c  nfc_cb_example.cpp
src/include/: linux_nfc_api.h
src/libnfc-utils/inc/: configPathProvider.h
src/libnfc-utils/src/: ConfigPathProvider.cc
src/nfcandroid_nfc_hidlimpl/halimpl/tml/transport/: NfccAltI2cTransport.cc  NfccAltSpiTransport.cc  NfccAltTransport.cc  NfccAltTransport.h
src/nfcandroid_nfc_hidlimpl/halimpl/utils/: phNxpConfig.cpp  phNxpConfig.h
src/nxp_nci_hal_libnfc-nci/src/include/: Nxp_Features.h  bt_types.h
src/nxp_nci_hal_libnfc-nci/utils/: config.cc
src/nxp_nci_hal_libnfc-nci/utils/include/: config.h
src/service/: linux_nfc_api.cpp
